--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-25  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure.in [disable-libstdcxx-v3] (libstdcxx_flags): Search
+	$$r/TARGET_SUBDIR/libio for _G_config.h.
+
 2000-08-23  Alexandre Oliva  <aoliva@redhat.com>
 
 	* MAINTAINERS: Add self as a build machinery (*.in) maintainer.
