--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-08-25  Alexandre Oliva  <aoliva@redhat.com>
 
+	* configure.in (FLAGS_FOR_TARGET): Use $target_configdirs and
+	$targargs to tell whether newlib is going to be built.
+
 	* configure.in [disable-libstdcxx-v3] (libstdcxx_flags): Search
 	$$r/TARGET_SUBDIR/libio for _G_config.h.
 
