--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 25 04:21:13 2000  Alexandre Oliva  <aoliva@redhat.com>
+
+	* crtstuff.c (CRT_CALL_STATIC_FUNCTION): Define default.
+	(fini_dummy, init_dummy): Use it.
+
 Fri 25-Aug-2000 08:03:27 BST  Neil Booth  <NeilB@earthling.net>
 
 	* cpplex.c (is_macro_disabled): Caller has already checked
