* loop.c (constant_high_bytes): Delete.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35977 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,8 @@
 2000-08-26  Michael Hayes  <mhayes@cygnus.com>
+	
+	* loop.c (constant_high_bytes): Delete.
+
+2000-08-26  Michael Hayes  <mhayes@cygnus.com>
 
 	* loop.c (prescan_loop): Move checks for NOTE_INSN_LOOP_CONT
 	and NOTE_INSN_LOOP_VTOP to...
