* loop.c (count_loop_regs_set): Replace start and end arguments 	with loop argument.  All callers udated.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35978 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,9 @@
 2000-08-26  Michael Hayes  <mhayes@cygnus.com>
+
+	* loop.c (count_loop_regs_set): Replace start and end arguments
+	with loop argument.  All callers udated.
+	
+2000-08-26  Michael Hayes  <mhayes@cygnus.com>
 	
 	* loop.c (constant_high_bytes): Delete.
 
