--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.c (ix86_expand_branch): Treat GE and GEU the same
+	way as LT and LTU when the second operand has 0 in low word.
+
 2000-08-26  Michael Hayes  <mhayes@cygnus.com>
 
 	* basic-block.h (struct loop): Rename `exits' field to
