--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/g++.old-deja/g++.other/crash22.C: New test.
+
 2000-08-24  Mark Mitchell  <mark@codesourcery.com>
 
 	* gcc.dg/noncompile/930622-2.c: Adjust error message.
