--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-25  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/format-ext-3.c, gcc.dg/format-ext-4.c,
+	gcc.dg/format-ext-5.c: New tests.
+
 2000-08-25  Jakub Jelinek  <jakub@redhat.com>
 
 	* testsuite/g++.old-deja/g++.other/crash22.C: New test.
