--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-25  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm.h (STRUCT_VALUE): Define to 0, not NULL.
+
 Fri Aug 25 12:52:49 EDT 2000  John Wehle  (john@feith.com)
 
 	* i386.c (ix86_find_base_term): New.
