--- a/gcc-2_95-branch/gcc/ChangeLog
+++ b/gcc-2_95-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-25  David Edelsohn  <edelsohn@gnu.org>
+
+	* collect2.c (use_import_list): Always return 0 (disable).
+
 2000-07-07  Manfred Hollstein  <manfredh@redhat.com>
 
 	* i386.md (exception_receiver): Add missing parameter in
