--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-25  Greg McGary  <greg@mcgary.org>
+
+	* gjavah.c (cxx_keyword_subst): Use ARRAY_SIZE.
+
 2000-08-24  Greg McGary  <greg@mcgary.org>
 
 	* lang.c (lang_decode_option): Use ARRAY_SIZE.
