* tree.c (init_tree): Use ARRAY_SIZE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35989 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-25  Greg McGary  <greg@mcgary.org>
+
+	* tree.c (init_tree): Use ARRAY_SIZE.
+
 2000-08-25  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* error.c (cp_tree_printer): Rework.
