* flow.c (dump_edge_info): Use ARRAY_SIZE. 	* config/alpha/alpha.c (alpha_expand_block_move): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35990 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-25  Greg McGary  <greg@mcgary.org>
+
+	* flow.c (dump_edge_info): Use ARRAY_SIZE.
+	* config/alpha/alpha.c (alpha_expand_block_move): Likewise.
+
 2000-08-25  Richard Earnshaw  <rearnsha@arm.com>
 
 	* arm.h (STRUCT_VALUE): Define to 0, not NULL.
