--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-25  Jim Wilson  <wilson@cygnus.com>
+
+	* function.c (gen_mem_addressof): Clear MEM_ALIAS_SET if no decl.
+
 2000-08-25  Greg McGary  <greg@mcgary.org>
 
 	* flow.c (dump_edge_info): Use ARRAY_SIZE.
