* gcc.dg/cpp/tr-warn4.c: Remove unconstrained .* from 	dg-warning regexps.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35997 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-26  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/cpp/tr-warn4.c: Remove unconstrained .* from
+	dg-warning regexps.
+
 2000-08-25  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/format-ext-3.c, gcc.dg/format-ext-4.c,
