--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-26  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.dg/dwarf2-2.c: New test.
+
 2000-08-26  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/cpp/tr-warn4.c: Remove unconstrained .* from
