* tm.texi (FINI_SECTION_ASM_OP, CRT_CALL_STATIC_FUNCTION): Document.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36002 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-08-26  Alexandre Oliva  <aoliva@redhat.com>
 
+	* tm.texi (FINI_SECTION_ASM_OP, CRT_CALL_STATIC_FUNCTION):
+	Document.
+
 	* config/mn10300/mn10300.h (DBX_REGISTER_NUMBER): Remap register
 	numbers to the ranges used by GDB.
 
