--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-27  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* config.guess: Import CVS version 1.152.
+	* config.sub: Import CVS version 1.177.
+
 2000-08-25  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in (FLAGS_FOR_TARGET): Use $target_configdirs and
