In gcc: 2000-08-27  Geoff Keating  <geoffk@cygnus.com>
	* config/rs6000/rs6000.md (movdi_internal64+5): Make SUBREG-safe
	by using gen_lowpart_common.
	(movdi_internal64+6): Likewise.

In gcc/testsuite:
2000-08-27  Geoff Keating  <geoffk@cygnus.com>

	* gcc.c-torture/compile/20000825-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36005 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-27  Geoff Keating  <geoffk@cygnus.com>
+
+	* config/rs6000/rs6000.md (movdi_internal64+5): Make SUBREG-safe
+	by using gen_lowpart_common.
+	(movdi_internal64+6): Likewise.
+
 2000-08-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* tm.texi (FINI_SECTION_ASM_OP, CRT_CALL_STATIC_FUNCTION):
