--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-27  Geoff Keating  <geoffk@cygnus.com>
+
+	* gcc.c-torture/compile/20000825-1.c: New test.
+
 2000-08-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.dg/dwarf2-2.c: New test.
