--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-27  Greg McGary  <greg@mcgary.org>
+
+	* cpplex.c (parse_string): Don't look for backslash
+	before first char in `namebuf'.
+	* loop.c (strength_reduce): Skip NOTEs.
+
 2000-08-27  Jason Merrill  <jason@redhat.com>
 
 	* c-decl.c (duplicate_decls): Don't set TREE_STATIC or clear
