--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-28  Jason Merrill  <jason@redhat.com>
+
+	* lex.c (file_name_nondirectory): Move to toplev.c.
+
+	* cp-tree.h (LOCAL_CLASS_P): New macro.
+	* class.c (finish_struct_1): Use it.
+
 2000-08-27  Alex Samuel  <samuel@codesourcery.com>
 
 	* mangle.c (CLASSTYPE_TEMPLATE_ID_P): Remove unexplained voodoo.
