--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-28  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.in (REQUIRED_OFILES): Add md5.o.
+	(CFILES): Add md5.c.
+	* md5.c: New file.
+
 2000-08-27  Alex Samuel  <samuel@codesourcery.com>
 
 	* cp-demangle.c (demangle_name): Initialize template_p in local
