--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2000-08-28  Richard Henderson  <rth@cygnus.com>
+
+	* local-alloc.c (requires_inout): Don't use reserved range for
+	EXTRA_CONSTRAINTS; use anything not matched by REG_CLASS_FROM_LETTER.
+	* recog.c (asm_operand_ok): Likewise.
+	(preprocess_constraints, constrain_operands): Likewise.
+	* regclass.c (record_reg_classes): Likewise.
+	* reload.c (find_reloads): Likewise.
+	* reload1.c (maybe_fix_stack_asms): Likewise.
+	(reload_cse_simplify_operands): Likewise.
+	* stmt.c (expand_asm_operands): Likewise.
+
+	* md.texi: Update constraints documentation.
+	* tm.texi (EXTRA_CONSTRAINT): Update.
+
 2000-08-28  Jason Merrill  <jason@redhat.com>
 
 	* dwarf2out.c (new_loc_descr): Use calloc.
