--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-28  Richard Henderson  <rth@cygnus.com>
+
+	* Makefile.in (md5.o): Depend on config.h.
+
 2000-08-28  Jason Merrill  <jason@redhat.com>
 
 	* Makefile.in (REQUIRED_OFILES): Add md5.o.
