* xcoffout.c: Fix formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36035 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-28  Kazu Hirata  <kazu@hxi.com>
+
+	* xcoffout.c: Fix formatting.
+
 2000-08-28  Jason Merrill  <jason@redhat.com>
 
 	* dwarf2out.c (attr_checksum): Also ignore DW_AT_producer.
