--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-08-28  Kazu Hirata  <kazu@hxi.com>
 
+	* tree.c: Fix formatting.
+
 	* xcoffout.c: Fix formatting.
 
 2000-08-28  Jason Merrill  <jason@redhat.com>
