* calls.c (expand_call): Don't create a VAR_DECL just to throw it 	away. 	* expr.c (expand_expr, case TARGET_EXPR): Don't call 	mark_addressable. 	* tree.h (get_file_function_name): Remove two duplicate 	declarations.
	* typeck.c (mark_addressable): Remove code that pokes around in
	RTL.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36038 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-29  Mark Mitchell  <mark@codesourcery.com>
+
+	* typeck.c (mark_addressable): Remove code that pokes around in
+	RTL.
+
 2000-08-28  Jason Merrill  <jason@redhat.com>
 
 	* lex.c (file_name_nondirectory): Move to toplev.c.
