--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2000-08-29  Mark Mitchell  <mark@codesourcery.com>
+
+	* calls.c (expand_call): Don't create a VAR_DECL just to throw it
+	away.
+	* expr.c (expand_expr, case TARGET_EXPR): Don't call
+	mark_addressable.
+	* tree.h (get_file_function_name): Remove two duplicate
+	declarations.
+
 2000-08-28  Kazu Hirata  <kazu@hxi.com>
 
 	* tree.c: Fix formatting.
