--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* wtr-label-1.c, wtr-suffix-1.c: New tests.
+
 2000-08-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.dg/return-type-2.c: New test.
