--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-29  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* vax.md (sltu, sgeu): Delete sltu and sgeu insn patterns.
+
 2000-08-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpperror.c (print_file_and_line): If line is (unsigned int)-1,
