--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+Tue Aug 29 15:17:54 EDT 2000  John Wehle  (john@feith.com)
+
+	* loop.c (prescan_loop): Don't check unknown_address_altered
+	when deciding if insert_loop_mem is safe.  Add BLKmode MEMs
+	to loop_store_mems as necessary.
+	(loop_invariant_p): Don't check unknown_address_altered
+	or unknown_constant_address_altered.
+
 2000-08-29  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* vax.md (sltu, sgeu): Delete sltu and sgeu insn patterns.
