--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Wed Aug 30 00:11:42 2000  Denis Chertykov  <denisc@overta.ru>
+
+	* config/avr/avr.md ("*movsf","*movsi"): Pass NULL to
+	output_movsisf instead of which_alternative.
+
+	* config/avr/avr.c (output_reload_inhi): Check for NULL ponter.
+
 Tue Aug 29 22:29:58 2000  Denis Chertykov  <denisc@overta.ru> & Marek Michalkiewicz <marekm@linux.org.pl>
 
 	* config/avr/avr-protos.h: (avr_output_ascii) Removed.
