--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-29  Kazu Hirata  <kazu@hxi.com>
+
+	* gcc.c: Fix formatting.
+
 2000-08-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* flags.h (time_report, mem_report): New global flags.
